lib/src/compiler/tests/testdata/errors/20.out
error[E100]: wrong type
 --> line:5:15
  |
5 |     #a in (0.."10")
  |               ^^^^ expression should be `integer`, but is `string`
  |